.metadata/.plugins/org.eclipse.cdt.ui/TIMER_BASE.build.log
14:31:32 **** Incremental Build of configuration Debug for project TIMER_BASE ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L053xx -c -I../Core/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:57:25: error: expected ';' before 'int'
   57 | /* USER CODE BEGIN 0 */_
      |                         ^
      |                         ;
......
   65 | int main(void)
      | ~~~                      
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

14:31:33 Build Failed. 2 errors, 0 warnings. (took 479ms)

